<resources>
    <string name="app_name">Android WebDAV</string>

    <!-- Common -->
    <string name="ip_address">Ip address</string>
    <string name="mac_address">Mac address</string>
    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="network_error">Network error! Please check your router.</string>
    <string name="document">Document</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="bit_torrent">Bit Torrent</string>
    <string name="application">Application</string>
    <string name="others">Others</string>
    <string name="all">All</string>
    <string name="refresh">Refresh</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="move">Move</string>
    <string name="dns_server">DNS</string>
    <string name="cancel">Cancel</string>
    <string name="message">Message</string>
    <string name="connect">Connect</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_waiting">Waiting…</string>
    <string name="account">Account</string>
    <string name="next_step">Next step</string>
    <string name="done">Done</string>
    <string name="logging">Logging</string>
    <string name="cannot_be_blank">Cannot be blank ！</string>
    <string name="setting_success">Success ！</string>
    <string name="setting_failure">Failed ！</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="restart">Restart</string>

    <string name="tool_category">Category</string>
    <string name="tool_transport_list">List</string>
    <string name="tool_upload">Upload</string>
    <string name="choose_upload_file_type">Choose upload file type</string>
    <string name="sort_by_file_name">File name</string>
    <string name="sort_by_file_size">File size</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_by_type">Type</string>
    <string name="new_folder">New folder</string>
    <string name="new_folder_fail">New folder failed!</string>
    <string name="empty_folder_hint">This folder is empty!</string>
    <string name="select_count">Selected %d</string>
    <string name="check_all">Check all</string>
    <string name="check_none">Check none</string>
    <string name="uploading_wait">Uploading, please wait…</string>
    <string name="upload_ok">Upload OK.</string>
    <string name="upload_fail">Upload failed!</string>
    <string name="downloading_wait">Downloading, please wait…</string>
    <string name="download_ok">Download OK.</string>
    <string name="download_fail">Download failed!</string>
    <string name="directory_already_exists">Directory %s is already exists!</string>
    <string name="str_select_files_upload">select files to upload</string>
    <string name="str_select_ap_save_path">AP path</string>
    <string name="str_upload">Upload</string>
    <string name="str_delete_notice">Do you really want to delete?</string>
    <string name="str_delete">Delete</string>
    <string name="str_rename">Rename</string>
    <string name="str_move">Move</string>
    <string name="str_back">Back</string>
    <string name="str_path_back">Path Back</string>
    <string name="str_move_title">Select To Folder</string>
    <string name="str_can_not_rename_at_same_time">Does not support renaming several at the same time</string>
    <string name="rename_failed">Rename failed !</string>
    <string name="rename_conflict">There is a filename conflict !</string>
    <string name="rename_success">Rename Success !</string>
    <string name="str_select_num_count">Selected %d Num</string>
    <string name="str_image_title_select">select image directory</string>
    <string name="str_video_title_select">select video directory</string>
    <string name="str_move_to_position_select">select move to directory</string>
    <string name="str_trans_list">Transaction List</string>
    <string name="str_new_folder">New Folder</string>
    <string name="str_new">New</string>
    <string name="str_move_success">Move Success !</string>
    <string name="str_move_failed">Move Failed !</string>
    <string name="str_download_wait">Downloading, Please wait…</string>
    <string name="str_upload_wait">Uploading, Please wait…</string>
    <string name="str_download_ok">Download OK</string>
    <string name="str_upload_ok">Upload OK</string>
    <string name="str_operation">Operation</string>
    <string name="str_upload_list">Upload List</string>
    <string name="str_download_list">DownLoad List</string>
    <string name="str_transmitting">Transmitting(%d)…</string>
    <string name="str_trans_ok">Transfer Complete(%d)</string>
    <string name="str_trans_error">Trans Error</string>
    <string name="str_nothing_can_opt">Nothing can be operation!</string>
    <string name="str_delete_select">Delete Select</string>
    <string name="str_no_upload_notice">No Upload Info</string>
    <string name="str_no_download_notice">No Download Info</string>
    <string name="str_dir_is_null">Dir is null!</string>
    <string name="str_get_list_failed">Get list failed!</string>
    <string name="str_create_folder_failed">Create folder failed!</string>
    <string name="str_choose_file_type">Choose file Type</string>
    <string name="str_choose_local_sync_file">Local Sync Dir</string>
    <string name="str_choose_remote_sync_file">Remote Sync Dir</string>


    <string name="str_select_all">Select All</string>
</resources>
