<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/drive_browser_tool_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="@dimen/padding_little_1"
            android:paddingRight="@dimen/padding_little_1"
            android:background="@drawable/drive_browser_tool_upper_selector"
            android:drawableLeft="@drawable/drive_browser_tool_category_left"
            android:drawableRight="@drawable/drive_browser_tool_category_right"
            android:singleLine="true"
            android:text="@string/tool_category"
            android:textSize="@dimen/text_size_small"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/drive_browser_tool_transfer_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="@dimen/padding_little_1"
            android:paddingRight="@dimen/padding_little_1"
            android:background="@drawable/drive_browser_tool_upper_selector"
            android:drawableLeft="@drawable/drive_browser_tool_transfer_list"
            android:singleLine="true"
            android:text="@string/tool_transport_list"
            android:textSize="@dimen/text_size_small"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/drive_browser_tool_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="@dimen/padding_little_1"
            android:paddingRight="@dimen/padding_little_1"
            android:background="@drawable/drive_browser_tool_upper_selector"
            android:drawableLeft="@drawable/drive_browser_tool_upload"
            android:singleLine="true"
            android:text="@string/tool_upload"
            android:textSize="@dimen/text_size_small"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/drive_browser_tool_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/drive_browser_tool_lower_selector"
            android:src="@drawable/drive_browser_tool_sort" />

        <ImageButton
            android:id="@+id/drive_browser_tool_new_folder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/drive_browser_tool_lower_selector"
            android:src="@drawable/drive_browser_tool_new_folder" />

        <ImageButton
            android:id="@+id/drive_browser_tool_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/drive_browser_tool_lower_selector"
            android:clickable="false" />

    </LinearLayout>

</LinearLayout>